[workspace]
resolver = "2"
members = [
    "crates/ripple",
    "crates/example-cargo-test",
]

[workspace.package]
version       = "0.1.0"
edition       = "2021"
rust-version  = "1.75"
license       = "MIT OR Apache-2.0"
repository    = "https://github.com/llamaha/ripple"
description   = "Purpose-built CI runners for patchwave. No YAML."

[workspace.dependencies]
ripple        = { path = "crates/ripple" }

anyhow        = "1"
thiserror     = "1"
tokio         = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "time", "signal"] }
reqwest       = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
tracing       = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures       = "0.3"
url           = "2"

[profile.release]
lto           = "thin"
codegen-units = 1
strip         = "symbols"
