[package]
name         = "ripple"
description  = "SDK for writing purpose-built CI runners against a patchwave server."
version      = "0.1.0"
edition      = "2021"
rust-version = "1.75"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/llamaha/ripple"

[dependencies]
anyhow             = "1"
thiserror          = "1"
tokio              = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "time", "signal"] }
reqwest            = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
tracing            = "0.1"
futures            = "0.3"
url                = "2"
bytes              = "1"
flate2             = "1"
blake3             = "1"

# Atomic VCS — drive sync + apply directly from the library, no CLI shellout.
atomic-core        = { path = "../atomic/atomic-core" }
atomic-remote      = { path = "../atomic/atomic-remote" }
atomic-repository  = { path = "../atomic/atomic-repository" }

[profile.release]
lto           = "thin"
codegen-units = 1
strip         = "symbols"
