[package]
name        = "ripple"
description = "SDK for writing purpose-built CI runners against a patchwave server."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

[dependencies]
anyhow             = { workspace = true }
thiserror          = { workspace = true }
tokio              = { workspace = true }
reqwest            = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
tracing            = { workspace = true }
futures            = { workspace = true }
url                = { workspace = true }
